src/test/resources/frontendReference/invalid/syntaxErr/variables/badintAssignments.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:13 -- extraneous input '0' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
Syntactic Error at 13:11 -- extraneous input 'A4' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
2 parser error(s) detected, no further compilation attempted.
